packages/fuel-indexer-tests/trybuild/fail_if_attribute_args_include_self.stderr
error: `self` argument not allowed in handler function.
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_args_include_self.rs
  |
  | / #[indexer(
  | |     manifest = "packages/fuel-indexer-tests/trybuild/simple_wasm.yaml"
  | | )]
  | |__^
  |
  = note: this error originates in the attribute macro `indexer` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0601]: `main` function not found in crate `$CRATE`
 --> ../fuel-indexer-tests/trybuild/fail_if_attribute_args_include_self.rs
  |
  | }
  |  ^ consider adding a `main` function to `$DIR/../fuel-indexer-tests/trybuild/fail_if_attribute_args_include_self.rs`
